Make website India-focused with INR pricing

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GiftAI Pro - AI-Powered Pharmaceutical Gifting Platform</title>
-    <meta name="description" content="Revolutionize your pharmaceutical gifting with AI-powered gift recommendations and instant competitive pricing. Trusted by 500+ companies for professional medical gifts." />
+    <meta name="description" content="Revolutionize your pharmaceutical gifting in India with AI-powered gift recommendations and instant competitive pricing in INR. Trusted by 500+ Indian companies for professional medical gifts." />
     <meta name="author" content="GiftAI Pro" />
 
-    <meta property="og:title" content="GiftAI Pro - AI-Powered Pharmaceutical Gifting" />
-    <meta property="og:description" content="Discover personalized gift ideas and get competitive quotes instantly with our AI platform designed for pharmaceutical professionals." />
+    <meta property="og:title" content="GiftAI Pro - AI-Powered Pharmaceutical Gifting for India" />
+    <meta property="og:description" content="Discover personalized gift ideas and get competitive quotes in INR instantly with our AI platform designed for Indian pharmaceutical professionals." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
